objects/smagicinteract__Action_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>smagicinteract__Action__c</referenceTo>
        <relationshipLabel>Action Parameters</relationshipLabel>
        <relationshipName>Action_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Parameter_Name__c</fullName>
        <label>Parameter Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Parameter_Type__c</fullName>
        <label>Parameter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>ChatterField</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Parameter__c</fullName>
        <label>Parameter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Action Parameter</label>
    <nameField>
        <label>Action Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>